# stock-insight-agent

./: .env.example  .gitignore  LICENSE  Procfile  README.md  advanced_analysis.py  app.py  backtester.py  config.py  core_nlp.py  dashboard.py  database.py  enrich_data.py  inference_engine.py  ingest_graph.py  insights.db  main.py  nlp_processor.py  nse_stocks.csv  nse_stocks_enriched.csv  pyproject.toml  requirements.txt  scheduler.py  scraper.py  stock_data.py  test_api.py  test_knowledge_graph.py  test_nlp.py  ticker_mapping.py  ticker_utils.py  worker.py
.github/workflows/: tests.yml
tests/: conftest.py  test_advanced_analysis.py  test_backtester.py  test_inference_engine.py  test_nlp_processor.py  test_scraper.py  test_stock_data.py  test_ticker_utils.py  test_worker.py
